# euclid

./: .gitignore  Makefile  Makefile.am  Makefile.in  README  a.out  autogen.sh  config  configure.ac  helloWORLD.txt  helloworld.cpp
cruft/: helloworld.cpp
doc/: XtoQ-Tests.txt
doc/code_docs/: README_code_docs
doc/internal_docs/: 2011_11_26_B_EuclidProjectPlan.odt  2011_11_26_EuclidProjectPlan.odt  coding_standard.txt
doc/internal_docs/project_schedule/: .gitignore  README_project_schedult.txt  Week1Bookings.tji  dec12-jan8.tji  dec5_dec11.tji  jan16-jan22.tji  jan23-jan29.tji  jan9-jan15.tji  nov28_dec4.tji  project_tasks.tjp
doc/notes/: README_notes  temp.txt
doc/reference/: README_reference
experimental/bhuddle/: DisplayNumberController.m  DisplayNumberDialog.xib  check.txt
experimental/bhuddle/Hello./: Makefile  README
experimental/bhuddle/Hello./Hello/: AppDelegate.h  AppDelegate.m  Hello-Info.plist  Hello-Prefix.pch  HelloView.h  HelloView.m  Makefile  main.m
experimental/bhuddle/Hello./Hello.xcodeproj/: project.pbxproj
experimental/bhuddle/Hello./Hello.xcodeproj/project.xcworkspace/xcuserdata/aas.xcuserdatad/: UserInterfaceState.xcuserstate
experimental/bhuddle/Hello./Hello.xcodeproj/xcuserdata/aas.xcuserdatad/xcschemes/: Hello.xcscheme  xcschememanagement.plist
experimental/bhuddle/Hello./Hello/en.lproj/: MainMenu.xib
experimental/bhuddle/Hello./HelloTests/: HelloTests-Info.plist  HelloTests.h  HelloTests.m
experimental/carrbs/list/: Makefile  context_list.c  context_list.h
experimental/carrbs/rootimg/: rootimg.c
experimental/dsnyder/: Makefile  main.c  rootimg_api.c  rootimg_api.h  util.h
experimental/jvanderw/: project_tasks.tjp  xcb-hw.c
experimental/jvanderw/lp-xcb/: Makefile  lpxcb.c  lpxcb_api.c  lpxcb_api.h  lpxcb_damage.c  lpxcb_damage.h  lpxcb_data.h  lpxcb_event.c  lpxcb_event.h  lpxcb_table.c  lpxcb_table.h  lpxcb_util.c  lpxcb_util.h
experimental/jvanderw/obj-c/: GNUmakefile  ModUtil.m  main.m  modutil.h  modutil.m
experimental/jvanderw/rootimg/: Makefile  README  rootimg.c  util.c  util.h
experimental/jvanderw/rootimg/src/: rootimg.c
hooks/: post-receive.sample  pre-rebase.sample  prepare-commit-msg.sample
include/: Makefile.am
internal_documentation/: README_internal_documentation.txt
man/: Makefile.am
src/: Makefile  Makefile.in  context_list.c  context_list.h  data.h  event_loop.c  init.c  util.c  util.h  window.c  xtoq.c  xtoq.h  xtoq_internal.h
src/libcompositewm/: Makefile.am  context_list.c  data.h  event_loop.c  init.c  input.c  window.c  xtoq.c  xtoq.h  xtoq_internal.h
src/xtoq/: Makefile.am  XtoqApplication.h  XtoqApplication.m  XtoqController.h  XtoqController.m  XtoqImageRep.h  XtoqImageRep.m  XtoqView.h  XtoqView.m  XtoqWindow.h  XtoqWindow.m  main.m
src/xtoq/bundle/: Info.plist  Makefile.am  mk_bundke.sh  xmodmap.local
src/xtoq/bundle/Resources/: xinitrc
xtoq-xcode/xtoq-xcode.xcodeproj/: project.pbxproj
xtoq/xtoq/: AppController.h  AppController.m  AppDelegate.h  AppDelegate.m  DisplayNumberController.h  DisplayNumberController.m  Makefile  Makefile.in  XtoqApplication.h  XtoqApplication.m  XtoqController.h  XtoqController.m  XtoqImageRep.h  XtoqImageRep.m  XtoqView.h  XtoqView.m  XtoqWindow.h  XtoqWindow.m  main.m  temp  xtoq-Info.plist  xtoq-Prefix.pch
xtoq/xtoq.xcodeproj/: project.pbxproj
xtoq/xtoq.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
xtoq/xtoq/Contents/Resources/X11/lib/X11/xinit/: xinitrc
xtoq/xtoq/en.lproj/: MainMenu.xib
